<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_wireshark_plugin</name>
  <version>1.0.0</version>
  <description>Wireshark dissector for IOP</description>

  <author email="lukas.boes@fkie.fraunhofer.de">Lukas Boes</author>
  <author email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <!-- <depend>python-pyxb</depend> -->
</package>
